community module updated
