# docs/swagger.json
@@ -326,6 +326,14 @@
                     "Communities"
                 ],
                 "summary": "get list of own communities",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "search value",
+                        "name": "search",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
